@@ -2,6 +2,7 @@ Revision history for autodie-variables
 
 {{$NEXT}}
           Fixed for new cache-less behavior on 5.15.8+
+          Made sure NGROUPS is defined (for Solaris)
 
 0.002     2011-12-21 16:10:19 Europe/Amsterdam
           Made autodie::variables work on perl 5.10-5.12 too (previously only worked on 5.14)
